<resources>
    <string name="app_name">RetorofitApplication</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_registered_nlogin_here">Already Registered?\nLogin Here</string>
    <string name="already_registered_user_here">Already Registered User Data</string>
    <string name="mobile_number">Mobile Number</string>
</resources>